a bit further along

--- a/config.json
+++ b/config.json
@@ -1,5 +1,15 @@
 {
+	"public": {
+		"path": "public"
+	},
 	"api": {
-		"port": 9000
+		"port": 9000,
+		"dataPath": {
+			"pizza": "data/pizza.json",
+			"allergens": "data/allergens.json",
+			"ingredients": "data/ingredients.json",
+			"orders": "data/orders.json",
+			"customers": "data/customers.json"
+		}
 	}
 }
