--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "server.js",
 	"type": "module",
 	"scripts": {
-		"start": "nodemon server.js"
+		"start": "nodemon app.js"
 	},
 	"repository": {
 		"type": "git",
@@ -21,7 +21,8 @@
 	},
 	"homepage": "https://github.com/CodecoolGlobal/pizza-order-prototype-javascript-Hamza-Walker#readme",
 	"dependencies": {
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.22"
